--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
             <a href="" class="btn btn-sign">Cadastrar</a>
         </div>
     </nav>
+    
+    <section class="section_titulo">
+        <h1>Sobre nós</h1>
+        <h3>Por que somos diferentes</h3>
+        <p>
+            Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de 
+            todo o mundo a se concentrarem naquilo que é realmente importante para elas.
+        </p>
+    </section>
+
+
 </body>
 </html>
