--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
         </p>
     </section>
 
-
+    <section class="section_numeros">
+        <div class="numeros_info">
+            <h2>400+</h2>
+            <span>Projetos concluídos</span>
+            <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+        </div>
+        <div class="numeros_info">
+            <h2>100+</h2>
+            <span>Colaboradores</span>
+            <p>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+        </div>
+        <div class="numeros_info">
+            <h2>20k</h2>
+            <span>Downloads</span>
+            <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+        <div class="numeros_info">
+            <h2>500+</h2>
+            <span>Reviews 5 estrelas</span>
+            <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+        </div>
+    </section>
 </body>
 </html>
