--- a/index.html
+++ b/index.html
@@ -57,5 +57,47 @@
             <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
         </div>
     </section>
+
+    <section class="section_titulo">
+        <h1 class="time_h1">Vagas Abertas</h1>
+        <h3>Estamos procurando por talentos</h3>
+        <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+        <img class="imagem_time" src="Image.png"/>
+    </section>
+
+    <section class="section-vagas">
+        <h2 class="vagas-area">Desenvolvimento de Software</h2>
+        <div class="vaga">
+            <h3 class="titulo-vaga">Desenvolvedor iOS</h3>
+            <div class="informacao_vaga">
+                <span class="informacao_vaga_type">Full-time</span>
+                <span class="informacao_vaga_salario">Faixa salarial: R$6.000</span>
+            </div>
+        </div>
+        <div class="vaga">
+            <h3 class="titulo-vaga">Desenvolvedor iOS</h3>
+            <div class="informacao_vaga">
+                <span class="informacao_vaga_type">Full-time</span>
+                <span class="informacao_vaga_salario">Faixa salarial: R$6.000</span>
+            </div>
+        </div>
+
+        <h2 class="vagas-area">Design</h2>
+        <div class="vaga">
+            <h3 class="titulo-vaga">Desenvolvedor iOS</h3>
+            <div class="informacao_vaga">
+                <span class="informacao_vaga_type">Full-time</span>
+                <span class="informacao_vaga_salario">Faixa salarial: R$6.000</span>
+            </div>
+        </div>
+        <div class="vaga">
+            <h3 class="titulo-vaga">Desenvolvedor iOS</h3>
+            <div class="informacao_vaga">
+                <span class="informacao_vaga_type">Full-time</span>
+                <span class="informacao_vaga_salario">Faixa salarial: R$6.000</span>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
